Redirect root requests to main site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello World
+<meta http-equiv="refresh" content="0; url=https://www.christianconnection.com">
+<link rel="canonical" href="https://www.christianconnection.com" />
