--- a/error.html
+++ b/error.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="wrapper">
-		<p><img src="/assets/pages/500/500_computer.png" alt="Sad computer" /></p>
+		<p><img src="/assets/500_computer.png" alt="Sad computer" /></p>
 		<h1>We’re experiencing a problem at our end.</h1>
 		<p class="error">(Error 503)</p>
 		<h2>Sorry, we weren't able to complete your page load within a reasonable time, so we had to give up. Our technical team has been notified that you received this error and we'll look into it.</h2>
